finish homepage and complete some features